syntax = "proto3";
package waves.events;
option java_package = "com.wavesplatform.events.protobuf";

import "waves/block.proto";
import "waves/amount.proto";
import "waves/transaction.proto";
import "waves/script.proto";

message BlockchainUpdated {
    bytes id = 1;
    int32 height = 2;

    message Append {
        oneof body {
            Block block = 1;
            SignedMicroBlock micro_block = 2;
        }
        repeated bytes transaction_ids = 3;

        StateUpdate state_update = 11;
        repeated StateUpdate transaction_state_updates = 12;
    }

    enum Rollback {
        BLOCK = 0;
        MICROBLOCK = 1;
    }

    oneof update {
        Append append = 11;
        Rollback rollback = 12;
    }
}

message StateUpdate {
    repeated BalanceUpdate balances = 1;
    repeated LeasingUpdate leases = 2;
    repeated DataEntryUpdate data_entries = 3;
    repeated AssetStateUpdate assets = 4;

    message BalanceUpdate {
        bytes address = 1;
        Amount amount = 2;
    }

    message LeasingUpdate {
        bytes address = 1;
        int64 in = 2;
        int64 out = 3;
    }

    message DataEntryUpdate {
        bytes address = 1;
        DataTransactionData.DataEntry data_entry = 2;
    }

    message AssetStateUpdate {
        bytes asset_id = 1;

        oneof type {
            Issue issue = 2;
            UpdateAssetVolume update_asset_volume = 3;
            ForbidReissue forbid_reissue = 4;
            SetAssetScript set_asset_script = 5;
            StartSponsorship start_sponsorship = 6;
            CancelSponsorship cancel_sponsorship = 7;
            UpdateAssetInfo update_asset_info = 8;
        }

        message Issue {
            oneof name {
                string name_string = 1;
                bytes name_bytes = 2;
            }

            oneof description {
                string description_string = 3;
                bytes description_bytes = 4;
            }

            int32 decimals = 5;
            bool reissuable = 6;
            int64 volume = 7;
            Script script = 8;
            bool nft = 9;
        }

        message UpdateAssetVolume {
            int64 new_volume = 1;

            /*
                Related to a bug in the blockchain when it was possible to reissue
                assets so that the total volume became more then int64 max value.
                This field represents accurate volume even for those assets.

                This field can be ignored if the target system does not need such accuracy.

                Encoding: like Java BigInteger, https://docs.oracle.com/javase/7/docs/api/java/math/BigInteger.html#toByteArray()
            */
            bytes safe_new_volume = 2;
        }

        message ForbidReissue {}

        message SetAssetScript {
            Script script = 1;
        }

        message StartSponsorship {
            int64 sponsorship = 1;
        }

        message CancelSponsorship {}

        message UpdateAssetInfo {
            string name = 1;
            string description = 2;
        }
    }
}
